--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,22 @@
     "allowJs": true,
     "outDir": "build",
     "rootDir": "src",
+    "paths": {
+        "@modules/*":[
+            "src/modules/*"
+        ],
+        "@repositories/*":[
+            "src/app/repositories/*"
+        ],"@entities/*":[
+            "src/app/entities/*"
+        ],
+        "@shared/*":[
+            "src/shared/*"
+        ],
+        "@helpers/*":[
+            "src/shared/helpers/*"
+        ]
+    },
     "strict": true,
     "noImplicitAny": true,
     "baseUrl": "./",
