--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,36 +1,23 @@
 {
-  "compilerOptions": {
-
-    "target": "es5",
-    "module": "commonjs",
-    "lib": ["es6"],
-    "allowJs": true,
-    "outDir": "build",
-    "rootDir": "src",
-    "paths": {
-        "@modules/*":[
-            "src/modules/*"
-        ],
-        "@repositories/*":[
-            "src/app/repositories/*"
-        ],"@entities/*":[
-            "src/app/entities/*"
-        ],
-        "@shared/*":[
-            "src/shared/*"
-        ],
-        "@helpers/*":[
-            "src/shared/helpers/*"
-        ]
+    "compilerOptions": {
+        "allowJs": false,
+        "target": "ES6",
+        "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true,
+        "module": "commonjs",
+        "sourceMap": false,
+        "listEmittedFiles": true,
+        "alwaysStrict": true,
+        "esModuleInterop": true,
+        "resolveJsonModule": true,
+        "skipLibCheck": true
     },
-    "strict": true,
-    "noImplicitAny": true,
-    "baseUrl": "./",
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
-  }
+    "include": [
+        "lib/**/*",
+        "bin/*",
+        "tests/*.test.*"
+    ],
+    "exclude": [
+        "node_modules",
+    ]
 }
