--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,20 @@
 {
     "compilerOptions": {
-        "allowJs": false,
-        "target": "ES6",
-        "moduleResolution": "node",
-        "allowSyntheticDefaultImports": true,
-        "module": "commonjs",
-        "sourceMap": false,
-        "listEmittedFiles": true,
-        "alwaysStrict": true,
-        "esModuleInterop": true,
-        "resolveJsonModule": true,
-        "skipLibCheck": true,
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-    },
-    "exclude": [
-        "node_modules",
-    ]
-}
+  
+      "target": "es5",
+      "module": "commonjs",
+      "lib": ["es6"],
+      "allowJs": true,
+      "outDir": "./build",
+      "rootDir": "./src",
+      "strict": true,
+      "noImplicitAny": true,
+      "baseUrl": "./",
+      "esModuleInterop": true,
+      "experimentalDecorators": true,
+      "emitDecoratorMetadata": true,
+      "resolveJsonModule": true,
+      "skipLibCheck": true,
+      "forceConsistentCasingInFileNames": true
+    }
+  }
